--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
   "name": "maze-of-the-minotaur",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "type": "module",
   "scripts": {
+    "build": "NODE_ENV=production tsc && vite build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
+    "@types/debug": "^4.1.12",
+    "eslint": "^9.30.1",
+    "gh-pages": "^6.3.0",
     "typescript": "~5.8.3",
-    "vite": "^6.3.5"
+    "typescript-eslint": "^8.35.1",
+    "vite": "^7.0.2",
+    "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "debug": "^4.4.1",
+    "supports-color": "^10.0.0"
   }
 }
