--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "maze-of-the-minotaur",
   "version": "0.3.0",
+  "homepage": "http://itsericwoodward.github.io/maze-of-the-minotaur",
   "type": "module",
   "scripts": {
     "build": "NODE_ENV=production tsc && vite build",
