--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "maze-of-the-minotaur",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "homepage": "http://itsericwoodward.github.io/maze-of-the-minotaur",
   "type": "module",
   "scripts": {
     "build": "NODE_ENV=production tsc && vite build",
     "build:gh-pages": "NODE_ENV=production tsc && vite build --config vite.config.gh-pages.js",
-    "deploy": "npm run build:gh-pages && gh-pages -d dist",
+    "build:webtoys": "NODE_ENV=production tsc && vite build --config vite.config.webtoys.js",
+    "predeploy": "npm run build:gh-pages",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "preview": "vite preview",
     "test": "vitest"
