--- a/assets/manifest-MiI8MS8j.json
+++ b/assets/manifest-MiI8MS8j.json
@@ -4,17 +4,17 @@
   "display": "standalone",
   "icons": [
     {
-      "src": "/images/icon32.png",
+      "src": "/maze-of-the-minotaur/images/icon32.png",
       "type": "image/png",
       "sizes": "32x32"
     },
     {
-      "src": "/images/icon144.png",
+      "src": "/maze-of-the-minotaur/images/icon144.png",
       "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "/images/icon512.png",
+      "src": "/maze-of-the-minotaur/images/icon512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
